# PDNSim

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  view_ir_map.m  visualize.m
doc/: Vsrc_description.md
include/: pdnsim.h
include/pdnsim/: pdnsim.h
jenkins/: Dockerfile.dev  build.sh  install.sh  test.sh
src/: -  .IRSolver.cpp.swp  CMakeLists.txt  CMakeLists.txt_compare  IRSolver.cpp  MakePDNSim.cpp  get_power.cpp  get_power.h  gmat.cpp  gmat.h  ir_solver.cpp  ir_solver.h  ir_solver.i  irsolver_wrap.cpp  main.cpp  main.h  node.cpp  node.h  openira_external.cpp  openira_external.h  parameters.cpp  parameters.h  pdnsim.cpp  pdnsim.i  pdnsim.tcl  pdnsim_external.cpp  pdnsim_external.h  pdnsim_wrap.cpp  timing.h
test/: .test_aes.py.swp  Vsrc_aes.loc  Vsrc_gcd.loc  aes_test.ok  aes_test.tcl  gcd_spice.spok  gcd_test.ok  gcd_test.tcl  gcd_voltage.rptok  gcd_write_sp_test.ok  gcd_write_sp_test.tcl  regression.sh  regression_old.sh  regression_tests.tcl  regression_vars.tcl  test_aes.py
test/aes/: aes.def  aes_test.ok  aes_test.tcl
test/gcd/: gcd.def  gcd_test.ok  gcd_test.tcl
test/nangate45/: Nangate45.lef
